# mcp-llm-router

./: .gitignore  ANTIGRAVITY_SETUP.md  ENV_SYNC.md  INTEGRATION_SUMMARY.md  QUICKSTART_ANTIGRAVITY.md  README.md  install.sh  mcp-config.json  mcp_client.py  mcp_manager.py  mcp_server_runner.py  pyproject.toml  setup_antigravity.bat  sync_antigravity_env.sh  test_deepseek_routing.py  test_local_reranker.py  test_mcp.py  test_reranker_integration.py
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  architecture.md  how-to-add-a-judge-tool.md
examples/: antigravity_example.md  demo_judge_gating.py  local_reranker_example.py  mcp-config.deepseek-ollama.json  mcp-config.local-reranker.json
mcp_llm_router/: __init__.py  brain.py  cli.py  codex.py  judge_bridge.py  memory.py  server.py
mcp_llm_router/judge/: __init__.py  mcp_features.py  models.py  roots.py  runtime.py  server.py
mcp_llm_router/judge/core/: constants.py  logging_config.py  server_helpers.py
mcp_llm_router/judge/db/: __init__.py  cleanup_service.py  conversation_history_service.py  db_config.py  dynamic_token_limits.py  factory.py  token_utils.py
rag/: __init__.py  chroma_store.py  chunker.py  embedding_config.py  indexer.py  main.py  ollama_embedder.py  reranker.py  retriever.py
scripts/: auto_install.py  inspector_smoke.py  mcp_manager.py  mcp_server_runner.py  opencode  setup_antigravity.sh  verify_server.py
tests/: test_deepseek_routing.py  test_judge_defaults.py  test_judge_helpers.py  test_judge_mcp_features.py  test_local_reranker.py  test_mcp.py  test_release_metadata.py  test_reranker_integration.py  test_server.py
(+31 files in other folders)
