[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_llm_router"
version = "0.1.0"
description = "MCP LLM Router"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp<3",
    "mcp",
    "httpx",
    "openai",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "litellm>=1.0.0",
    "sqlalchemy>=2.0.14",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_llm_router"]

[tool.setuptools.package-data]
"mcp_llm_router.judge" = [
    "prompts/**/*.md",
]
